[package]
name = "my-no-sql-data-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { branch = "main", git = "https://github.com/MyJetTools/rust-extensions.git" }
flurl = { branch = "0.1.1", git = "https://github.com/MyJetTools/fl-url" }
my-no-sql-server-abstractions = { branch = "main", git = "https://github.com/MyJetTools/my-no-sql-server-abstractions.git" }


tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
hyper = { version = "*", features = ["full"] }
